--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,12 @@
   <name>Ranked Root</name>
 
   <modules>
-    <module>ranked-command-service</module>
+    <module>command</module>
     <module>h2</module>
     <module>model</module>
+    <module>view/wall</module>
+    <module>lib/axon</module>
+    <module>application</module>
   </modules>
 
   <properties>
@@ -39,6 +42,17 @@
         <groupId>${project.groupId}</groupId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <artifactId>ranked-axon</artifactId>
+        <groupId>${project.groupId}</groupId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>ranked-command-service</artifactId>
+        <groupId>${project.groupId}</groupId>
+        <version>${project.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>org.axonframework</groupId>
         <artifactId>axon-spring-boot-starter</artifactId>
@@ -67,6 +81,10 @@
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-reflect</artifactId>
       <version>${kotlin.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.microutils</groupId>
+      <artifactId>kotlin-logging</artifactId>
     </dependency>
 
     <!--
