--- a/command/pom.xml
+++ b/command/pom.xml
@@ -52,6 +52,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>1.5.16</version>
+    </dependency>
 
   </dependencies>
 
