--- a/view/wall/pom.xml
+++ b/view/wall/pom.xml
@@ -20,6 +20,10 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>ranked-axon</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+    </dependency>
   </dependencies>
 
 
